# Spamlyser

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ALL_ISSUES_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_61_IMPLEMENTATION.md  ISSUE_63_IMPLEMENTATION.md  ISSUE_65_IMPLEMENTATION.md  README.md  app.py  config.py  diff_146.patch  diff_153.patch  diff_155.patch  diff_157.patch  diff_163.patch  diff_171.patch  ensemble_classifier_method.py  export_feature.py  fix_indent.py  issues.json  optimize_model.py  page_functions.py  prs.json  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  sample_data.csv  spamlyser_performance_20250812_142348.json  spamlyser_performance_20250910_212105.json  threat_analyzer.py  word_analyzer.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  security_report.yml  stale_review_request.yml
.github/workflows/: auto-author-assign.yml  ci.yml  lint.yml  security-audit.yml  stale-cleanup.yml
.streamlit/: secrets.toml.example
assets/: accessibility.py  styles.css  theme_manager.py
benchmarks/: __init__.py  benchmark_runner.py
csv/: multiclass_sample_data.csv
docs/: BATCH_RISK_INDICATORS.md  CUSTOM_RULES.md  EXPLAINABILITY.md  EXPORT_FORMATS.md  STORAGE_ARCHITECTURE.md
models/: __init__.py  anomaly_detector.py  batch_processor.py  benchmark_automation.py  calibration.py  calibrator_store.py  csv_sanitizer.py  custom_rules_manager.py  db_connection_pool.py  drift_tracker.py  encrypted_report.py  ensemble_classifier_method.py  error_boundary.py  export_encryptor.py  export_feature.py  feedback_handler.py  ham_explainer_viz.py  label_normalizer.py  lang_routing.py  language_detector.py  message_categorizer.py  model_comparator.py  model_explainer.py  model_init.py  navigation.py  old_batch_stub.py  optimize_model.py  quantizer.py  rate_limiter.py  recovery_agent.py  redos_guard.py  report_generator.py  rule_engine.py  rules_simulator.py  rules_validator.py  sender_reputation.py  session_analytics.py  simple_explainer.py  smart_preprocess.py  storage_manager.py  (+10 more)
pages/: analytics_dashboard.py  anomaly_dashboard.py  benchmark_dashboard.py  rules_editor.py  theme_customizer.py  trend_analytics.py  what_if_playground.py
scripts/: run_sast.py
tests/: __init__.py  conftest.py  test_basic.py  test_batch_processor.py  test_benchmark_automation.py  test_config.py  test_csv_sanitizer.py  test_custom_rules.py  test_db_connection_pool.py  test_drift_tracker.py  test_ensemble_get_model_prediction.py  test_export_feature.py  test_feedback_handler.py  test_feedback_issue_export.py  test_label_normalizer.py  test_lang_routing.py  test_optimize_model.py  test_page_functions.py  test_quantizer.py  test_redos_guard.py  test_report_generator.py  test_risk_indicators.py  test_rules_simulator.py  test_simple_explainer.py  test_smart_preprocess.py  test_storage_manager.py  test_text_sanitizer.py  test_theme_accessibility.py  test_threat_analyzer.py  test_threat_analyzer_extended.py  test_webhook_queue.py  test_what_if_analyzer.py  test_word_analyzer_is_hammy.py  test_workspace_manager.py  test_xss_word_analyzer.py
